--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "chart.js": "^2.9.3",
+    "fromentries": "^1.2.0",
     "leaflet": "^1.6.0",
     "react": "^16.12.0",
     "react-chartjs-2": "^2.8.0",
